# jobs

./: Makefile  README.md  active_jobs.xml  jobs_report.html  pyproject.toml
sample_responses/: board_response_python.html  board_response_python_rust.html  single_offer.html  single_offer_multiple_cities.html  single_offer_rust.html  single_offer_rust2.html
src/: cli.py  constants.py  criteria.py  custom_cache.py  exceptions.py  generate.py  jjit_api_client.py  jjit_board_parser.py  utils.py
src/models/: __init__.py  domain.py  jjit_responses.py  third_party_responses.py
src/templates/: report.html  report_template_jinja.html
tests/: test_cache.py
