[project]
name = "jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.127.1",
    "jinja2>=3.1.6",
]
