[project]
name = "jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.127.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]


[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# E/W: Error/Warning (Pyflakes/pycodestyle)
# F: Pyflakes
# I: isort (import sorting)
# B: flake8-bugbear (common bugs)
# UP: pyupgrade (modernize syntax)
# N: pep8-naming
select = ["E", "W", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"